feat: complete all public pages + Supabase migration
Pages built:
- /caes — full dog listings with search + size filters (React island)
- /sobre-nos — about page (principles, community, rescue, success stories)
- /ajudar — help/donate (in-kind, volunteering, FAT, financial + IBAN)
- /adocao — adoption (benefits, 6-step process, pricing cards)

Infrastructure:
- Nav updated with all page links
- Footer updated with real contact info + IBAN
- Seed data expanded to 12 real shelter dogs
- Supabase migration: dogs table, RLS, storage bucket
- Dog photo scraper script (104 dogs, 1083 photos downloaded)
- Scrape artifacts gitignored (dogs/, content/)

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,16 @@ pnpm-debug.log*
 .env
 .env.production
 
+# scraped dog photos (local reference only, not in repo)
+dogs/
+
+# scraped content (reference only)
+content/
+
+# scrape artifacts
+scrape-notes.md
+all-dogs.json
+
 # macOS-specific files
 .DS_Store
 
